feat: add tests and actions

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This contains an [external-adapter](https://docs.chain.link/docs/external-adapters/) for the [Neo4j Database](https://neo4j.com/). Host the adapter on your [Chainlink Node](https://docs.chain.link/docs/running-a-chainlink-node/) and query it using [Solidity](https://docs.soliditylang.org/en/v0.8.11/):",
   "main": "./src/index.js",
   "scripts": {
-    "start": "node ./src/index.js"
+    "start": "node ./src/index.js",
+    "test": "jest --forceExit"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,10 @@
     "@chainlink/external-adapter": "^0.2.6",
     "express": "^4.17.2",
     "neo4j-driver": "^4.4.1"
+  },
+  "devDependencies": {
+    "jest": "26.6.3",
+    "randomstring": "^1.1.5",
+    "supertest": "^6.1.3"
   }
 }
