--- a/.github/workflows/.test.yml
+++ b/.github/workflows/.test.yml
@@ -25,7 +25,7 @@ jobs:
       - run: npm install
       - run: npm run test
         env:
-          NEO4J_HTTP_URL: http://localhost:7474/
+          NEO4J_HTTP_URL: neo4j://neo4j:7474
           NEO4J_BOLT_URL: bolt://localhost:7687
           NEO4J_USER: neo4j
           NEO4J_PASSWORD: test
