--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -67,7 +67,7 @@ services:
         - 8080:8080
     environment:
       - EA_PORT=8080
-      - NEO4J_HTTP_URL=neo4j://neo4j:7474
+      - NEO4J_HTTP_URL=http://neo4j:7474
       - NEO4J_USER=neo4j
       - NEO4J_PASSWORD=test
       - NEO4J_DB=db
