--- a/.github/workflows/.test.yml
+++ b/.github/workflows/.test.yml
@@ -17,12 +17,14 @@ jobs:
           - 7687:7687
           - 7474:7474
     steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - name: Check out repository code
+        uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+      - name: Install
       - run: npm install
+      - name: Run Tests
       - run: npm run test
         env:
           NEO4J_HTTP_URL: http://localhost:7474
