--- a/.github/workflows/.test.yml
+++ b/.github/workflows/.test.yml
@@ -23,9 +23,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install
-      - run: npm install
+        run: npm install
       - name: Run Tests
-      - run: npm run test
+        run: npm run test
         env:
           NEO4J_HTTP_URL: http://localhost:7474
           NEO4J_BOLT_URL: bolt://localhost:7687
