--- a/.github/workflows/.test.yml
+++ b/.github/workflows/.test.yml
@@ -14,9 +14,17 @@ jobs:
         env:
           NEO4J_AUTH: neo4j/test
         ports:
-          - 7687:7687
           - 7474:7474
+          - 7687:7687
     steps:
+      - name: Check the deployed service URL
+        uses: jtalk/url-health-check-action@v2
+        with:
+          url: http://localhost:7474
+          follow-redirect: false
+          max-attempts: 5
+          retry-delay: 5s
+          retry-all: false
       - name: Check out repository code
         uses: actions/checkout@v2
       - uses: actions/setup-node@v2
