--- a/.github/workflows/.test.yml
+++ b/.github/workflows/.test.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Check the deployed service URL
         uses: jtalk/url-health-check-action@v2
         with:
-          url: http://neo4j:7474/browser
+          url: http://localhost:7474/browser
           follow-redirect: false
           max-attempts: 5
           retry-delay: 5s
