--- a/.github/workflows/.test.yml
+++ b/.github/workflows/.test.yml
@@ -31,4 +31,4 @@ jobs:
           NEO4J_BOLT_URL: bolt://localhost:7687
           NEO4J_USER: neo4j
           NEO4J_PASSWORD: test
-          NEO4J_DB: db
+          NEO4J_DB: neo4j
