--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -70,7 +70,7 @@ services:
       - NEO4J_HTTP_URL=http://neo4j:7474
       - NEO4J_USER=neo4j
       - NEO4J_PASSWORD=test
-      - NEO4J_DB=db
+      - NEO4J_DB=neo4j
     depends_on:
       neo4j:
         condition: service_healthy
