refactor: remove required envs

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,8 +24,8 @@ services:
       - ROOT=/chainlink
       - LOG_LEVEL=debug
       - MIN_OUTGOING_CONFIRMATIONS=2
-      - ETH_CHAIN_ID=${ETH_CHAIN_ID}
-      - LINK_CONTRACT_ADDRESS=${LINK_CONTRACT_ADDRESS}
+      - ETH_CHAIN_ID=4
+      - LINK_CONTRACT_ADDRESS=0x01be23585060835e02b77ef475b0cc51aa1e0709
       - CHAINLINK_TLS_PORT=0
       - SECURE_COOKIES=false
       - GAS_UPDATER_ENABLED=true
